--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,8 +18,8 @@ jobs:
         java-version: '17'
         cache: maven
 
-    - name: Cache Maven packages
-      uses: actions/cache@v2
+    - name: Cache Maven dependencies
+      uses: actions/cache@v3
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
