Git Action yml Name 변경

--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-java@v4
       with:
         java-version: '17'
-        distribution: 'openjdk'
+        distribution: 'corretto'
         cache: maven
         java-package: jdk
         check-latest: false
