--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -32,7 +32,7 @@ jobs:
           ${{ runner.os }}-maven-
 
     - name: Build with Maven
-      run: mvn clean package --batch-mode --fail-never
+      run: mvn clean package
 
     # - name: Upload JAR as artifact
     #   uses: actions/upload-artifact@v3
