--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -4,14 +4,38 @@ on:
   push:
     branches: [ "main" ]
 
-jobs:
-  build:
+jobs:    
+  create-tag:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Set up Git
+      run: |
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
+
+    - name: Generate Tag
+      id: generate_tag
+      run: |
+        REPO_NAME=$(basename $(pwd))
+        USER_NAME="${{ github.actor }}"     # GitHub 액션을 트리거한 사용자
+        DATE=$(date +'%Y%m%d')
+        TAG_NAME="${REPO_NAME}-${USER_NAME}-${DATE}"
+        echo "Generated Tag: $TAG_NAME"
+        echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV  # 환경 변수로 설정
+
+    - name: Authenticate with GIT_TOKEN
+      run: |
+        git remote set-url origin https://x-access-token:${{ secrets.GIT_TOKEN }}@github.com/${{ github.repository }}
+        
+    - name: Create and push tag
+      run: |
+        git tag ${{ env.TAG_NAME }}          # 환경 변수로 생성한 태그 사용
+        git push origin ${{ env.TAG_NAME }}  # 푸시
+
+  jar-build:
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -31,11 +55,16 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-    - name: Build with Maven
+    - name: Jar Build with Maven
       run: mvn clean package
 
-    # - name: Upload JAR as artifact
-    #   uses: actions/upload-artifact@v3
+
+
+
+  
+    # - name: Set up AWS credentials
+    #   uses: aws-actions/configure-aws-credentials@v1
     #   with:
-    #     name: kong-test-api-01
-    #     path: target/*.jar
+    #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+    #     aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+    #     aws-region: ap-northeast-2
