--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -36,6 +36,8 @@ jobs:
         git push origin ${{ env.TAG_NAME }}  # 푸시
 
   jar-build:
+    runs-on: ubuntu-latest
+    steps:
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
