--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ "main" ]
 
+permissions:
+  contents: write  # 'write' 권한 추가
+
 jobs:    
   create-tag:
     runs-on: ubuntu-latest
