--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -41,6 +41,11 @@ jobs:
   jar-build:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout repository Tag Commit
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.sha }}  # 현재 커밋에서 체크아웃
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
