--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -8,12 +8,11 @@ permissions:
   contents: write  # 'write' 권한 추가
 
 jobs:    
-  jar-build:
+  create-tag:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
+    # - name: Checkout repository
+    #   uses: actions/checkout@v4
     - name: Set up Git
       run: |
         git config user.name "GitHub Actions"
@@ -37,6 +36,12 @@ jobs:
       run: |
         git tag ${{ env.TAG_NAME }}          # 환경 변수로 생성한 태그 사용
         git push origin ${{ env.TAG_NAME }}  # 푸시
+
+  jar-build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
