--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -8,10 +8,10 @@ permissions:
   contents: write  # 'write' 권한 추가
 
 jobs:    
-  jar-build:
+  create-tag:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
+    - name: Checkout repository For Create Tag
       uses: actions/checkout@v4
 
     - name: Set up Git
@@ -38,6 +38,13 @@ jobs:
         git tag ${{ env.TAG_NAME }}          # 환경 변수로 생성한 태그 사용
         git push origin ${{ env.TAG_NAME }}  # 푸시
 
+  jar-build:
+    runs-on: ubuntu-latest
+    needs: create-tag
+    steps:    
+    - name: Checkout repository For Jar Build
+      uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -49,16 +56,9 @@ jobs:
         overwrite-settings: true
         job-status: success
 
-    - name: Cache Maven dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-
     - name: Jar Build with Maven
       run: mvn clean package
+
 
 
 
