--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -59,14 +59,33 @@ jobs:
     - name: Jar Build with Maven
       run: mvn clean package
 
+  docker-image-build:
+    runs-on: ubuntu-latest
+    needs: jar-build
+    steps:
+    - name: Checkout repository For Docker Image Build
+      uses: actions/checkout@v4    
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
+    - name: Set up AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+        aws-region: ap-northeast-2
 
-
+    - name: Set Environment Variables
+      run: |
+        echo "ECR_REPO=sun-test" >> $GITHUB_ENV
+        echo "AWS_ACCOUNT_ID=890742611047" >> $GITHUB_ENV
+        echo "ECR_URL=dkr.ecr.ap-northeast-2.amazonaws.com"
+      
+    - name: Docker Image Build and Push to ECR
+      run: |
+        aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}  
+        docker build -t ${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}/${{ env.ECR_REPO }}:${{ env.TAG_NAME }} .
+        docker push ${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}/${{ env.ECR_REPO }}:${{ env.TAG_NAME }}
   
-    # - name: Set up AWS credentials
-    #   uses: aws-actions/configure-aws-credentials@v1
-    #   with:
-    #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-    #     aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-    #     aws-region: ap-northeast-2
+
