--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -79,17 +79,16 @@ jobs:
     - name: Set Environment Variables
       run: |
         echo "ECR_REPO=sun-test" >> $GITHUB_ENV
+
         echo "AWS_ACCOUNT_ID=890742611047" >> $GITHUB_ENV
         echo "ECR_URL=dkr.ecr.ap-northeast-2.amazonaws.com"
-        echo "AWS_REGION=ap-northeast-2"
 
     - name: ECR Login
-      run: |
-        aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
-
+      id: login-ecr
+      
     - name: Docker Image Build and Push to ECR
       run: |
-        docker build -t ${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}/${{ env.ECR_REPO }}:${{ env.TAG_NAME }} .
-        docker push ${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}/${{ env.ECR_REPO }}:${{ env.TAG_NAME }}
+        docker build -t ${{ env.ECR_REPO }}/${{ env.ECR_REPO }}:${{ env.TAG_NAME }} -f $GITHUB_WORKSPACE/Dockerfile $GITHUB_WORKSPACE/
+        docker push ${{ env.ECR_REPO }}:${{ env.TAG_NAME }}
   
 
