Git Action TAG_NAME Output 참조 설정 변경

--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -82,6 +82,7 @@ jobs:
         echo "ECR_REPO=sun-test" >> $GITHUB_ENV
         echo "AWS_ACCOUNT_ID=890742611047" >> $GITHUB_ENV
         echo "ECR_URL=dkr.ecr.ap-northeast-2.amazonaws.com" >> $GITHUB_ENV
+        echo "TAG_NAME=${{ needs.create-tag.outputs.tag_name }}" >> $GITHUB_ENV  # needs로 tag_name을 가져옴
 
     - name: ECR Login
       id: login-ecr
@@ -89,7 +90,7 @@ jobs:
 
     - name: Docker Image Build and Push to ECR
       run: |
-        docker build -t ${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}/${{ env.ECR_REPO }}:${{ steps.create-tag.outputs.tag_name }} -f $GITHUB_WORKSPACE/Dockerfile $GITHUB_WORKSPACE/
-        docker push ${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}/${{ env.ECR_REPO }}:${{ steps.create-tag.outputs.tag_name }}
+        docker build -t ${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}/${{ env.ECR_REPO }}:${{ env.TAG_NAME }} -f $GITHUB_WORKSPACE/Dockerfile $GITHUB_WORKSPACE/
+        docker push ${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}/${{ env.ECR_REPO }}:${{ env.TAG_NAME }}
   
 
