--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -10,6 +10,8 @@ permissions:
 jobs:    
   create-tag:
     runs-on: ubuntu-latest
+    outputs:
+      tag_name: ${{ steps.generate_tag.outputs.tag_name }}  # output으로 tag_name 설정
     steps:
     - name: Checkout repository For Create Tag
       uses: actions/checkout@v4
