Git Action 환경 변수 변경

--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -90,7 +90,7 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
 
     - name: Check tag name
-      run: echo "Tag from create-tag: ${{ needs.create-tag.outputs.tag_name }}"
+      run: echo "Tag from create-tag / ${{ needs.create-tag.outputs.tag_name }}"
 
     - name: ECR Login
       id: login-ecr
