--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -29,7 +29,7 @@ jobs:
         DATE=$(date +'%Y%m%d_%H%M')
         TAG_NAME="${PROJECT}-${CODE_KIND}-${USER_NAME}-${DATE}"
         echo "Generated Tag: $TAG_NAME"
-        echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV  # 환경 변수로 설정
+        echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV     # 환경 변수로 설정
         echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT  # Output 설정
 
     - name: Authenticate with GIT_TOKEN
@@ -67,7 +67,9 @@ jobs:
 
   docker-image-build:
     runs-on: ubuntu-latest
-    needs: jar-build  
+    needs:
+      - create-tag
+      - jar-build
     env:
       ECR_REPO: sun-test
       AWS_ACCOUNT_ID: 890742611047
