--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -42,7 +42,7 @@ jobs:
         git push origin ${{ env.TAG_NAME }}           # Push
         
     outputs:
-      tag_name: ${{ steps.generate_tag.outputs.tag_name }}
+      tag_name: ${{ steps.generate_tag.outputs.tag_name }} 
 
   jar-build:
     runs-on: ubuntu-latest
@@ -67,8 +67,8 @@ jobs:
 
   docker-image-build:
     runs-on: ubuntu-latest
-    needs:
-      - create-tag
+    needs:                                                  # Tag 참조를 위해 needs 추가        
+      - create-tag  
       - jar-build
     env:
       ECR_REPO: sun-test
