--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,8 @@
 FROM openjdk:17-jdk-slim
 
-COPY target/*.jar /app/*.jar
+COPY ROOT.jar /app/ROOT.jar
 
-CMD ["java", "-jar", "/app/*.jar"]
-# CMD ["java", "-Dspring.profiles.active=prod", "-jar", "/app/*.jar"] # Profile이 있을 경우
+CMD ["java", "-jar", "/app/ROOT.jar"]
+# CMD ["java", "-Dspring.profiles.active=prod", "-jar", "/app/ROOT.jar"] # Profile이 있을 경우
 
 EXPOSE 8080
