--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -23,6 +23,9 @@ jobs:
       S3_BUILD_ARTIFACT_PATH: artifact
       ECR_REPO: sun-test
       ECR_URL: dkr.ecr.ap-northeast-2.amazonaws.com
+      ECS_CLUSTER_NAME: sun-ecs
+      ECS_SERVICE_NAME: sun-ecs-service
+      ECS_TASK_DEFINITION: sun-ecs-task
       DOCKER_FILE: DockerFile
     steps:
     - name: Checkout repository For Create Tag
@@ -67,7 +70,9 @@ jobs:
       ecr_repo: ${{ env.ECR_REPO }}
       ecr_url: ${{ env.ECR_URL }}
       docker_file: ${{ env.DOCKER_FILE }}
-
+      ecs_cluster_name: ${{ env.ECS_CLUSTER_NAME }}
+      ecs_service_name: ${{ ECS_SERVICE_NAME }}
+      ecs_task_definition: ${{ ECS_TASK_DEFINITION }}
   jar-build:
     runs-on: ubuntu-latest
     needs: create-tag
@@ -127,7 +132,9 @@ jobs:
       S3_BUILD_ARTIFACT_PATH: ${{ needs.create-tag.outputs.s3_build_artifact_path }}      
       ECR_REPO: ${{ needs.create-tag.outputs.ecr_repo }}
       ECR_URL: ${{ needs.create-tag.outputs.ecr_url }}
-
+      ECS_CLUSTER_NAME: ${{ needs.create-tag.outputs.ecs_cluster_name }}
+      ECS_SERVICE_NAME: ${{ needs.create-tag.outputs.ecs_service_name }}
+      ECS_TASK_DEFINITION: ${{ needs.create-tag.outputs.ecs_task_definition }}
       DOCKER_FILE: ${{ needs.create-tag.outputs.docker_file }}
 
     steps:
@@ -167,3 +174,12 @@ jobs:
       run: |
         aws s3 cp ${{ env.ECS_BUILD_ARTIFACT_FILE }} s3://${{ env.S3_BUCKET_NAME }}/${{ env.CLASS }}/${{ env.PROJECT }}/${{ env.CODE_KIND}}/${{ env.S3_BUILD_ARTIFACT_PATH }}/
 
+    - name: Update ECS Service
+      run: |
+        TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }})
+        NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq '.taskDefinition | .containerDefinitions[0].image = "${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}/${{ env.ECR_REPO }}:${{ env.TAG_NAME }}"')
+        NEW_TASK_DEFINITION_REVISION=$(aws ecs register-task-definition --cli-input-json "$NEW_TASK_DEFINITION")
+        aws ecs update-service \
+          --cluster ${{ env.ECS_CLUSTER_NAME }} \
+          --service ${{ env.ECS_SERVICE_NAME }} \
+          --task-definition $NEW_TASK_DEFINITION_REVISION
