--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -71,8 +71,8 @@ jobs:
       ecr_url: ${{ env.ECR_URL }}
       docker_file: ${{ env.DOCKER_FILE }}
       ecs_cluster_name: ${{ env.ECS_CLUSTER_NAME }}
-      ecs_service_name: ${{ ECS_SERVICE_NAME }}
-      ecs_task_definition: ${{ ECS_TASK_DEFINITION }}
+      ecs_service_name: ${{ env.ECS_SERVICE_NAME }}
+      ecs_task_definition: ${{ emv.ECS_TASK_DEFINITION }}
   jar-build:
     runs-on: ubuntu-latest
     needs: create-tag
