--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -174,6 +174,9 @@ jobs:
       run: |
         aws s3 cp ${{ env.ECS_BUILD_ARTIFACT_FILE }} s3://${{ env.S3_BUCKET_NAME }}/${{ env.CLASS }}/${{ env.PROJECT }}/${{ env.CODE_KIND}}/${{ env.S3_BUILD_ARTIFACT_PATH }}/
 
+    - name: Install jq
+      run: sudo apt-get install jq
+
     - name: Update ECS Service
       run: |
         # 태스크 정의 가져오기
