--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -198,7 +198,7 @@ jobs:
           )
         ')
         # # 이미지 변경
-        # NEW_TASK_DEFINITION=$(echo "$STRIPPED_TASK_DEFINITION" | jq --arg image_uri "$image_uri" '.containerDefinitions[0].image = $image_uri')
+        NEW_TASK_DEFINITION=$(echo "$STRIPPED_TASK_DEFINITION" | jq --arg image_uri "$image_uri" '.containerDefinitions[0].image = $image_uri')
 
         # # 새로운 태스크 정의 등록
         # NEW_TASK_DEFINITION_REVISION=$(aws ecs register-task-definition $NEW_TASK_DEFINITION)
