--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -201,7 +201,7 @@ jobs:
         NEW_TASK_DEFINITION=$(echo "$STRIPPED_TASK_DEFINITION" | jq --arg image_uri "$image_uri" '.containerDefinitions[0].image = $image_uri')
 
         # 새로운 태스크 정의 등록
-        # NEW_TASK_DEFINITION_REVISION=$(aws ecs register-task-definition $NEW_TASK_DEFINITION)
+        NEW_TASK_DEFINITION_REVISION=$(aws ecs register-task-definition $NEW_TASK_DEFINITION)
 
         # # 서비스 업데이트
         # aws ecs update-service \
