Git Action ECS New Task 등록Pipe 방식 Test

--- a/.github/workflows/API_Build.yml
+++ b/.github/workflows/API_Build.yml
@@ -184,7 +184,7 @@ jobs:
 
         # 환경 변수 설정
         IMAGE_URI="${{ env.AWS_ACCOUNT_ID }}.${{ env.ECR_URL }}/${{ env.ECR_REPO }}:${{ env.TAG_NAME }}"
-
+        NEW_TASK_DEFINITION_FILE=new_task.json
         # 불필요한 필드 제거
         STRIPPED_TASK_DEFINITION=$(echo "$TASK_DEFINITION" | jq '
           del(
@@ -197,13 +197,15 @@ jobs:
             .compatibilities
           )
         ')
-        # 이미지 변경
+        # 이미지 태그 변경
         NEW_TASK_DEFINITION=$(echo "$STRIPPED_TASK_DEFINITION" | jq --arg image_uri "$image_uri" '.containerDefinitions[0].image = $image_uri')
-
+        
+        # Json 파일로 변환
+        echo "$NEW_TASK_DEFINITION" > "$NEW_TASK_DEFINITION_FILE"
+        
         # 새로운 태스크 정의 등록
-        # NEW_TASK_DEFINITION=$(aws ecs register-task-definition $NEW_TASK_DEFINITION)
-        echo "$NEW_TASK_DEFINITION" | aws ecs register-task-definition --cli-input-json file:///dev/stdin
-
+        aws ecs register-task-definition $NEW_TASK_DEFINITION_FILE
+        
         # # 서비스 업데이트
         # aws ecs update-service \
         #   --cluster ${{ env.ECS_CLUSTER_NAME }} \
